--- a/docs/rn300.md
+++ b/docs/rn300.md
@@ -41,7 +41,7 @@ Many API changes and renaming. Refer to [main API docs](api.md).
 
 * [Forked AsyncTCP](https://github.com/philbowles/AsyncTCP-master) ( For ESP32 builds only, but see below for ESP8266)
 * [PMB Tools](https://github.com/philbowles/pmbtools)
-* [AardvarkTCP](https://github.com/philbowles/AardvarkTCP)
+* [H4AsyncTCP](https://github.com/philbowles/H4AsyncTCP)
 
 Which you will need to install from scratch
 
