prior to outbedding client

--- a/docs/101.md
+++ b/docs/101.md
@@ -1,16 +1,16 @@
 ![plainhdr](../assets/pangoplain.jpg)
-# Getting started with PangolinMQTT
+# Getting started with H4AsyncMQTT
 
-PangolinMQTT is an *asynchronous* library. To receive messages, don't call *us*: we'll call ***you***! Most often this will be when some other user somewhere publishes an MQTT topic that matches one of your subscriptions.
+H4AsyncMQTT is an *asynchronous* library. To receive messages, don't call *us*: we'll call ***you***! Most often this will be when some other user somewhere publishes an MQTT topic that matches one of your subscriptions.
 
 The main process flow for you App is:
 
 1) Define two functions: one to handle your incoming messages subscriptions (The "message handler")
    and one to handle server connections (The "connection handler"). You *may* if you like also define
    a server *dis*connection handler and/or an error handler, but those are optional; the first two are not.
-2) In `setup()` function , tell PangolinMQTT about your handler functions, so it can call you when there is data for you.
-   Also at this point you tell PangolinMQTT the "obvious" stuff like your server IP/Port, logon credentials etc
-3) Once PangolinMQTT has all its essential connection info, it is safe to start your WiFi connection.
+2) In `setup()` function , tell H4AsyncMQTT about your handler functions, so it can call you when there is data for you.
+   Also at this point you tell H4AsyncMQTT the "obvious" stuff like your server IP/Port, logon credentials etc
+3) Once H4AsyncMQTT has all its essential connection info, it is safe to start your WiFi connection.
    It is important to note that everything done so far should only ever be done *once*, which is why it must be in `setup()`
 4) When WiFi has successfully connected, you can call the `connect()` function to connect to the MQTT server you set up in step 2
 5) At some point in the future - *over which you have no control* - your connection handler will get called*. 
@@ -29,7 +29,7 @@ There is no need to do anything / call anything in the `loop()` function.
 
 ```cpp
 ...
-PangolinMQTT mqttClient;
+H4AsyncMQTT mqttClient;
 ...
 // My message handler - gets called when you have data to process
 // can only ever happen AFTER Step 5 has been successful
@@ -99,7 +99,7 @@ There are many variations of the `publish` API to deal with the different types 
 
 ## Find me daily in these FB groups
 
-* [Pangolin Support](https://www.facebook.com/groups/pangolinmqtt/)
+* [Pangolin Support](https://www.facebook.com/groups/H4AsyncMQTT/)
 * [ESP8266 & ESP32 Microcontrollers](https://www.facebook.com/groups/2125820374390340/)
 * [ESP Developers](https://www.facebook.com/groups/ESP8266/)
 * [H4/Plugins support](https://www.facebook.com/groups/h4plugins)
