--- a/docs/rn100.md
+++ b/docs/rn100.md
@@ -39,7 +39,7 @@ In summary:
 all "fatal" lockup conditions removed - now causes error
 code optimised
 
-almost all references to / comparisons with "that other library" have been removed. The major effect on this is that the examples have been heavily mdofied / restructured to run *only* PangolinMQTT. It should now be just a bad memory.
+almost all references to / comparisons with "that other library" have been removed. The major effect on this is that the examples have been heavily mdofied / restructured to run *only* H4AsyncMQTT. It should now be just a bad memory.
 
 ---
 
@@ -55,7 +55,7 @@ redundant error conditions
 
 ## Find me daily in these FB groups
 
-* [Pangolin Support](https://www.facebook.com/groups/pangolinmqtt/)
+* [Pangolin Support](https://www.facebook.com/groups/H4AsyncMQTT/)
 * [ESP8266 & ESP32 Microcontrollers](https://www.facebook.com/groups/2125820374390340/)
 * [ESP Developers](https://www.facebook.com/groups/ESP8266/)
 * [H4/Plugins support](https://www.facebook.com/groups/h4plugins)
