--- a/docs/rn101.md
+++ b/docs/rn101.md
@@ -42,7 +42,7 @@ none
 
 ## Find me daily in these FB groups
 
-* [Pangolin Support](https://www.facebook.com/groups/pangolinmqtt/)
+* [Pangolin Support](https://www.facebook.com/groups/H4AsyncMQTT/)
 * [ESP8266 & ESP32 Microcontrollers](https://www.facebook.com/groups/2125820374390340/)
 * [ESP Developers](https://www.facebook.com/groups/ESP8266/)
 * [H4/Plugins support](https://www.facebook.com/groups/h4plugins)
