--- a/docs/rn300.md
+++ b/docs/rn300.md
@@ -10,7 +10,7 @@ BUGFIX client name not getting correctly set - would revert to default generated
 
 # Release Notes v3.0.0
 
-Major release requiring additional libraries, having breaking API changes and additional features. While regrettable, these are the result of continuing to move away from the illogical, inefficient, unnecessarily complex and *just plain wrong* API of "another library" that PangolinMQTT was written to replace. In earlier versions, full API compatibility was preserved to ease transition. Users were warned at the the time that the API *would* change: to fix obvious errors and arrant nonsense in "the other library". Version 3 is the final stage of that transition and the API is unlikely to change henceforth. Your patience and understanding is appreciated.
+Major release requiring additional libraries, having breaking API changes and additional features. While regrettable, these are the result of continuing to move away from the illogical, inefficient, unnecessarily complex and *just plain wrong* API of "another library" that H4AsyncMQTT was written to replace. In earlier versions, full API compatibility was preserved to ease transition. Users were warned at the the time that the API *would* change: to fix obvious errors and arrant nonsense in "the other library". Version 3 is the final stage of that transition and the API is unlikely to change henceforth. Your patience and understanding is appreciated.
 
 ---
 
@@ -41,7 +41,7 @@ Many API changes and renaming. Refer to [main API docs](api.md).
 
 * [Forked AsyncTCP](https://github.com/philbowles/AsyncTCP-master) ( For ESP32 builds only, but see below for ESP8266)
 * [PMB Tools](https://github.com/philbowles/pmbtools)
-* [H4AsyncTCP](https://github.com/philbowles/H4AsyncTCP)
+* [H4AsyncClient](https://github.com/philbowles/H4AsyncClient)
 
 Which you will need to install from scratch
 
@@ -61,7 +61,7 @@ none
 
 ## Find me daily in these FB groups
 
-* [Pangolin Support](https://www.facebook.com/groups/pangolinmqtt/)
+* [Pangolin Support](https://www.facebook.com/groups/H4AsyncMQTT/)
 * [ESP8266 & ESP32 Microcontrollers](https://www.facebook.com/groups/2125820374390340/)
 * [ESP Developers](https://www.facebook.com/groups/ESP8266/)
 * [H4/Plugins support](https://www.facebook.com/groups/h4plugins)
