--- a/docs/rn300.md
+++ b/docs/rn300.md
@@ -40,7 +40,7 @@ Many API changes and renaming. Refer to [main API docs](api.md).
 ### Now depends on new libraries
 
 * [Forked AsyncTCP](https://github.com/philbowles/AsyncTCP-master) ( For ESP32 builds only, but see below for ESP8266)
-* [PMB Tools](https://github.com/philbowles/pmbtools)
+* [PMB Tools](https://github.com/philbowles/H4Tools)
 * [H4AsyncClient](https://github.com/philbowles/H4AsyncClient)
 
 Which you will need to install from scratch
