--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,6 @@
 
 SOONEST:
+    rationalise api - single connect, 
 SOON:
     "Hamza's fix" RL overflow prevention
     add back in some more advanced examples
