Updates and documentations

--- a/docs/101.md
+++ b/docs/101.md
@@ -1,4 +1,5 @@
 ![plainhdr](../assets/pangoplain.jpg)
+
 # Getting started with H4AsyncMQTT
 
 H4AsyncMQTT is an *asynchronous* library. To receive messages, don't call *us*: we'll call ***you***! Most often this will be when some other user somewhere publishes an MQTT topic that matches one of your subscriptions.
@@ -13,13 +14,13 @@ The main process flow for you App is:
 3) Once H4AsyncMQTT has all its essential connection info, it is safe to start your WiFi connection.
    It is important to note that everything done so far should only ever be done *once*, which is why it must be in `setup()`
 4) When WiFi has successfully connected, you can call the `connect()` function to connect to the MQTT server you set up in step 2
-5) At some point in the future - *over which you have no control* - your connection handler will get called*. 
+5) At some point in the future - *over which you have no control* - your connection handler will get called*.
    Because you cannot know the connection state until that event, you must not make any other calls in the meanhwile
    as it makes no sense whatsoever to do so. If you try it, 1) they will do nothing  2) they will probably call the error handler function*
-   When the connect handler is called, you should then initialise any per-connection variables, start timers etc 
+   When the connect handler is called, you should then initialise any per-connection variables, start timers etc
    In most cases all you will do here is subscribe to your app's topics.
 
-  *This is obviously only on "the happy path": if your credentials are incorrect or the server is down, or any number of other reasons, your connect handler will *NOT* get called, but your (optional, and recommended) error handler will.
+  \* This is obviously only on "the happy path": if your credentials are incorrect or the server is down, or any number of other reasons, your connect handler will *NOT* get called, but your (optional, and recommended) error handler will.
 
 There is no need to do anything / call anything in the `loop()` function.
 
@@ -43,7 +44,7 @@ void onMqttMessage(const char* topic, const uint8_t* payload, size_t len,uint8_t
 // My connection handler, happens AFTER Step 4
 void onMqttConnect() {
 // STEP 5
-  Serial.printf("Connected to MQTT max payload size=%d\n",mqttClient.getMaxPayloadSize());
+  Serial.printf("Connected to MQTT max payload size=%d\n",getMaxPayloadSize());
   mqttClient.subscribe("mytopic1"); // defaults to @ QoS0
   mqttClient.subscribe("mytopic2"); // defaults to @ QoS0
   // ... and whatever else you need to do when u get a valid connection
@@ -56,23 +57,20 @@ void onMqttConnect() {
 ```cpp
 void setup(){
       
-  mqttClient.setWill("DIED",2,false,"probably still some bugs");
+  mqttClient.setWill("DIED",2,"probably still some bugs",false);
 //  define your connection
-  mqttClient.setServer(MQTT_URL,mqAuth,mqPass,cert);
 // tell pangolin the names of your handler functions:
   mqttClient.onConnect(onMqttConnect); // mandatory!
   mqttClient.onMessage(onMqttMessage); // mandatory!
   mqttClient.onMqttError(onMqttError);
-  mqttClient.onMqttConnect(onMqttConnect); // mandatory!
-  mqttClient.onMqttMessage(onMqttMessage); // mandatory if subscribing
-  mqttClient.onMqttDisconnect(onMqttDisconnect); // optional
+  mqttClient.onDisconnect(onMqttDisconnect); // optional
 
   // STEP 3
   // now connect To Wifi();
   ...
   // STEP 4
   // when Wifi connects:
-  mqttClient.connect("Pangolin_101",START_WITH_CLEAN_SESSION); // both optional
+  mqttClient.connect(MQTT_URL,mqAuth,mqPass,"Pangolin_101");
 }
 ```
 
@@ -105,6 +103,5 @@ There are many variations of the `publish` API to deal with the different types 
 * [H4/Plugins support](https://www.facebook.com/groups/h4plugins)
 
 I am always grateful for any $upport on [Patreon](https://www.patreon.com/esparto) :)
-
 
 (C) 2020 Phil Bowles
